--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link type="text/css" href="index.css" rel="stylesheet">
     <link rel="shortcut icon" type="image/png"  id="shortcut icon"/>
     <script type="text/javascript" src="script.js"></script>
-    <title>Revolution</title>
+    <title>Iron</title>
   <script src="https://cdn.jsdelivr.net/gh/FogNetwork/ABC/index.js"></script>
 </head>
 
